Expanded Cheat Menu:
- Code cleanup.

Mods:

Drones Build Menu 0.2:
Added Wasp Drones as well (removing drones from hubs will reset them to whatever the hub uses).

Number Bind Selection:
Use number keys (0-9) to switch between saved groups.
Ctrl-Num to add selected obj(s), and Shift-Num to remove.
Press the corresponding number to activate selection.
You can have more than one type of obj in a group, but beware that multi-select will base actions on the first obj added to the list.
Defaults to just selection, has mod option to select & view.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2242,3 +2242,8 @@ Click to open Paradox Breakthroughs Wiki page.",
 302535920011338,MARSHA,
 302535920011339,MARSHAs,
 302535920011340,Just an overall crappy place to live.,
+302535920011341,(worry not; resources were removed).,
+302535920011342,Select & View,
+302535920011343,Number Bind,
+302535920011344,Added <color yellow><amount></color> objs to <color green><bindnum></color>,
+302535920011345,Removed <color yellow><amount></color> objs from <color green><bindnum></color>,
