--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2247,3 +2247,8 @@ Click to open Paradox Breakthroughs Wiki page.",
 302535920011343,Number Bind,
 302535920011344,Added <color yellow><amount></color> objs to <color green><bindnum></color>,
 302535920011345,Removed <color yellow><amount></color> objs from <color green><bindnum></color>,
+302535920011346,Each Minute,
+302535920011347,Each Hour,
+302535920011348,Each Sol,
+302535920011349,"+<display_cap> Capacity, +<display_elec> <icon_Power> Consumption",
+302535920011350,+<display_cap> Capacity,
