Expanded Cheat Menu:
- Cleaned up some strings.
- CheatWorkAuto defaults to 100 instead of 150.

### Changed:
- Examine>Child checkbox: Examine all objs in a single child dlg.

Mods:

Infobar More Info 0.4:
Water, and other deposits remaining amounts.

Minor bug fixes for a bunch.
Deep Resources Never Run Out, Drones Carry Amount, Mark Selected Building Type, Notification Pause, Rocket Pin Enable, Upgrade Capacity

github@choggi.org

--- a/Mods ChoGGi/Infobar More Info/changes.txt
+++ b/Mods ChoGGi/Infobar More Info/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Water, and other deposits remaining amounts.
+
 v0.3
 Resource tooltips show time of resources remaining.
 Research tooltip shows total per Sol.
