--- a/Mods ChoGGi/Notification Pause/changes.txt
+++ b/Mods ChoGGi/Notification Pause/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Fixed log spam (thanks Wizu).
+
 v0.8
 Added mod options for all notifications.
 Defaults to only pausing for Critical/Important notifications.
