Expanded Cheat Menu:
### Changed:
- Added Const ids to Cheats>Consts.
- Mod Upload now asks when doing batch upload.
- Examine:
- > Clear Button works with lines and other stuff added.
- > Some toolbar buttons showed up at the wrong time.

Lib:
- RetName:
- > Added some more tables.

Mods:
Add Progress To Training Section 0.4:
Cleaned up code a bit, and added some text to school.

Construction Show Dome Passage Line 1.0:
Shortened max length by two to be able to fit triangle dome corners.
Added mod option to Adjust Line Length.

Deep Resources Never Run Out 0.3:
Works for new games, and as soon as a deposit is revealed.

Golden Storage 0.6:
Fixed issue with multiple depots (thanks RandyChampagne).
Added mod option to default desired to 10.

Infobar More Info 0.5:
Shows individual grids (with some mod options).
Remaining time for grid storage.
Mod option to adjust tooltip width.

Number Bind Selection 0.2:
Added a mod option to show a marker when select & view is enabled.

github@choggi.org

--- a/Mods ChoGGi/Add Progress To Training Section/changes.txt
+++ b/Mods ChoGGi/Add Progress To Training Section/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Cleaned up code a bit, and added some text to school.
+
 v0.3
 School now shows the percent needed to get traits from the school.
 
