--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1923,6 +1923,7 @@ Living Spaces: <spaces>",
 302535920011062,Force New Dome,
 302535920011063,Use this to force colonists to migrate.,
 302535920011067,Show during construction,
+302535920011351,Adjust Line Length,
 302535920011068,Show during construction,
 302535920011069,Grid Size,
 302535920011070,Grid Opacity,
@@ -1941,7 +1942,8 @@ Living Spaces: <spaces>",
 302535920011083,Carry Amount,
 302535920011084,Golden Storage,
 302535920011085,Golden Storages,
-302535920011086,Converts Metals to PreciousMetals.,
+302535920011086,Converts 10 <resource('Metals')> to 1 <resource('PreciousMetals')>.,
+302535920011353,Default to 10 items,
 302535920011087,Never Change,
 302535920011088,Remove the lock on this colonist.,
 302535920011089,Unlock Residence,
@@ -2245,6 +2247,7 @@ Click to open Paradox Breakthroughs Wiki page.",
 302535920011340,Just an overall crappy place to live.,
 302535920011341,(worry not; resources were removed).,
 302535920011342,Select & View,
+302535920011352,Show a marker when View option enabled,
 302535920011343,Number Bind,
 302535920011344,Added <yellow><amount></yellow> objs to <green><bindnum></green>,
 302535920011345,Removed <yellow><amount></yellow> objs from <green><bindnum></green>,
