--- a/Mods ChoGGi/Construction Show Dome Passage Line/changes.txt
+++ b/Mods ChoGGi/Construction Show Dome Passage Line/changes.txt
@@ -1,8 +1,12 @@
+v1.0
+Shortened max length by two to be able to fit triangle dome corners.
+Added mod option to Adjust Line Length.
+
 v0.9
 Parabola ftw.
 
 v0.8
-Added mod options option to disable it.
+Added mod option to disable it.
 
 v0.7
 Thought I got all the marker objects, guess not.
