Expanded Cheat Menu:
- Messed up Consts menu item desc last commit.

### Changed:
- Moved Capacity to Buildings.
- Moved School/Uni/San to Training Buildings.

Lib:
- RetName:
- > Just noticed that the gimped "_G" doesn't work well with pairs(), so I manually added some stuff.

Mods:
Landscaping Low Priority:
All landscaping jobs start as low priority.

Android Spec Uniforms 0.2:
Forgot to override GetSpecializationIcons (thanks BLade).

Hanging Gardens Children Allowed 0.2:
Mod option: Made visiting a service count as a playground visit (thanks Ericus1).

Pin Expander 0.8:
Too much shown for the wrong objs (thanks Magic Cuboid).

Show Infobar Planetary View 0.2:
Fixed for users without GP (thanks RustyDios).

Upgrade Capacity 0.6:
Properly added upgrades to modded buildings (thanks XxUnkn0wnxX).

github@choggi.org

--- a/Mods ChoGGi/Pin Expander/changes.txt
+++ b/Mods ChoGGi/Pin Expander/changes.txt
@@ -1,3 +1,6 @@
+v0.8
+Too much shown for the wrong objs (thanks Magic Cuboid).
+
 v0.7
 Menu opened offset when clicked once.
 Everything should have a menu now.
