Expanded Cheat Menu:
Examine:
- Crash when examining PointLight (obj:GetNumTris() again).
- Made examining with Child checkbox better,

Lib:
- Added skip delete depot to EmptyMechDepot.

Mods:
Block Pets:
Pets will no longer spawn from service buildings.

Constant Disasters:
Set a minimum interval between disasters (if you want hourly toxic rains for some reason).

Construction Show Dome Grid/Construction Show Drone Grid/Construction Show Dust Grid:
Playing nicer with each other.

Empty Mech Depot 0.8:
See Lib above.

Game Rules Breakthroughs 0.4:
Fixed possible blank screen in mission profile.

Deep Resources Never Run Out/Save Mission Profiles/View Colony Map:
Log spam.

github@choggi.org

--- a/Mods ChoGGi/Game Rules Breakthroughs/changes.txt
+++ b/Mods ChoGGi/Game Rules Breakthroughs/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Fixed possible blank screen in mission profile.
+
 v0.3
 Fixed blackscreen (the translate func couldn't find UICity and barfed).
 Bug the devs if you want the missing descriptions (or install my library mod).
