--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,5 @@
 "ID"," Text"
-302535920000920,"Examining objs from this dlg will <color red>%s</color>examine them all in a single dlg."
+302535920000883,
 302535920000923,
 302535920000941,
 302535920000945,
@@ -422,6 +422,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920000071,"Show Mods Log"
 302535920000692,"Log is blank (well not anymore)."
 302535920000477,"Clear out the windowed console log."
+302535920000920,"Examining objs from this dlg will <color red>%s</color>examine them all in a single dlg."
 302535920000590,"Batch"
 302535920000841,"If examining a table then exec this code for each entry.
 If it's an associative table then <yellow>o = value</yellow>."
@@ -2306,12 +2307,12 @@ Click to open Paradox Breakthroughs Wiki page."
 302535920011354,"Bumble the wee buggers"
 302535920011356,"Enable Console"
 302535920011357,"Enable Console Log"
-302535920011358,
-302535920011359,
-302535920011360,
-302535920011361,
-302535920011362,
-302535920011363,
+302535920011358,"Real Time Clock"
+302535920011359,"Show Clock"
+302535920011360,"<hour>:<min>"
+302535920011361,"24/12 Display"
+302535920011362,"Styles"
+302535920011363,"Background"
 302535920011364,
 302535920011365,
 302535920011366,
