Mods: Trade Pad All Resources: Can trade almost all resources (skipped blackcubes/mystery) on the trade pads.
Bottomless Storage 0.5:
Added seeds, you'll probably need to replace any existing ones.

Construction Show Dome Grid 0.3:
Added mod option to set the scale of grid objs.
Made grid reddish to stand out better on busy maps (or ones with my other grid mods).

Construction Show Drone Grid 1.0:
Added mod option to set the scale of grid objs.
Made DroneHub grid cyan to stand out better on busy maps (or ones with my other grid mods).

Construction Show Dust Grid 1.3:
Added mod option to set the scale of grid objs.
Made grid red to stand out better on busy maps (or ones with my other grid mods).

Construction Show Tribby Range 0.2:
Added mod option to set the scale of grid objs.

Construction Show Hex Buildable Grid, Moisture Vaporator Show Max, Save Mission Profiles:
Log spam.

Stop Auto-Rovers During Storms 0.2:
Added mod option to make them go for the nearest working laser/missile tower (default on).
Now ignores rovers that aren't in auto mode.
Added the rest of the auto-rovers.

github@choggi.org

--- a/Mods ChoGGi/Construction Show Dome Grid/changes.txt
+++ b/Mods ChoGGi/Construction Show Dome Grid/changes.txt
@@ -1,3 +1,7 @@
+v0.3
+Added mod option to set the scale of grid objs.
+Made grid reddish to stand out better on busy maps (or ones with my other grid mods).
+
 v0.2
 Works better with my other Construction Show * Grid mods.
 Stopped dome grids showing up for resource depots (not sure why they count as outskirt buildings).
