--- a/Mods ChoGGi/Bottomless Storage/changes.txt
+++ b/Mods ChoGGi/Bottomless Storage/changes.txt
@@ -1,7 +1,12 @@
+v0.5
+Added seeds, you'll probably need to replace any existing ones.
+
 v0.4
 Da Vinci
+
 v0.3
 Uses the smallest resource platform model now.
+
 v0.2
 Corrected title to Storage instead of depot.
 Added custom description.
