--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2318,10 +2318,10 @@ Click to open Paradox Breakthroughs Wiki page."
 302535920011366,"Grid Scale"
 302535920011367,"Dist From Cursor"
 302535920011368,"Show Construction Site Grids"
-302535920011369,
-302535920011370,
-302535920011371,
-302535920011372,
+302535920011369,"<str> will always be the lowest level."
+302535920011370,"Low Resources"
+302535920011371,"<str> will always be the highest level."
+302535920011372,"Max Threats"
 302535920011373,
 302535920011374,
 302535920011375,
