Expanded Cheat Menu:
- Log spam.

### Fixed:
- Image Viewer export works better (tries for .dds if no .tga).

Mods:

Construction Grid mods:
Removed flicker when near the grid dist limit.

Game Rules Threats Resources 0.3:
Bugfix.

Landscape Cold Wave Visibility:
Now you can actually see landscaping grids when a cold wave is active.
I don't think there's a way to just raise the opacity of all landscape sites, so this adds markers around them.

POI Add Tooltips 0.2:
Changed colour of POIs that already have a rocket.

Persistent Transport Route:
Zooming to the map overview will no longer cancel your transport route (like it should've been in the first place).

RC Constructor Terraformer Routes 0.2:
Added RC Terraformer.

Ranch Show Time Remaining:
Like farms, show how much time is left before harvest (instead of guessing from a percentage).

Renegade Progress 0.2:
Added a mod option to remove renegades as they appear.

Trade Pad All Resources 0.2:
Wasterock issue.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -223,8 +223,8 @@ It's a tradeoff between erroneous errors and the game locking up."
 Attachment bspheres are off (x and y are; z and rotate aren't).
 Some of the file names are guesses. <anim> is a guess, try removing it."
 302535920001411,"ECM has been disabled.
-Use <green>%s</green> to enable it.
-See the bottom of Gameplay>Controls if you've changed the shortcut."
+Use <green>%s</green> to enable it, or change <yellow>DisableECM</yellow> to false in <green>%s</green>.
+See the bottom of Gameplay>Controls if you've changed the key binding."
 302535920001383,"AddXTemplate borked template name: %s template: %s list: %s"
 302535920000013,"This shouldn't happen... Well dang something's bork bork bork."
 302535920000002,"Dumped"
