--- a/Mods ChoGGi/Construction Show Drone Grid/changes.txt
+++ b/Mods ChoGGi/Construction Show Drone Grid/changes.txt
@@ -1,3 +1,6 @@
+v1.1
+Removed flicker when near the grid dist limit.
+
 v1.0
 Added mod option to set the scale of grid objs.
 Made DroneHub grid cyan to stand out better on busy maps (or ones with my other grid mods).
