Expanded Cheat Menu:
### Changed:
- Examining a "str" obj that turns out to be a func will show the results instead of the func.
- > You can also pass args along with the ex(obj, "str", title, varargs)

Mods:

Bottomless/Golden:
Made shuttles default to off.
Added On/Off button.

Fix Rocket Stuck 1.4:
Added option to disable mod.
Trade rocket with 0 res sitting on pad.

github@choggi.org

--- a/Mods ChoGGi/Bottomless Storage/changes.txt
+++ b/Mods ChoGGi/Bottomless Storage/changes.txt
@@ -1,3 +1,7 @@
+v0.6
+Made shuttles default to off.
+Added On/Off button.
+
 v0.5
 Added seeds, you'll probably need to replace any existing ones.
 
