Mods: Added script.lua ref to all items.lua for people using mod editor.
Universal Depot Defaults:
Change default settings for new Universal Depots (also adds seeds).

Map Overview Show Surface Resources 0.3:
Changed to icon instead of text (less space used).
Opacity now uses 255-0 (0 == completely visible).
Added mod options for a black background, and different text styles.

Lib:
Log spam.

github@choggi.org

--- a/Mods ChoGGi/Map Overview Show Surface Resources/changes.txt
+++ b/Mods ChoGGi/Map Overview Show Surface Resources/changes.txt
@@ -1,2 +1,7 @@
+v0.3
+Changed to icon instead of text (less space used).
+Opacity now uses 255-0 (0 == completely visible).
+Added mod options for a black background, and different text styles.
+
 v0.2
 Fix for count never going down (thanks McKaby).
