--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,7 @@
 "ID"," Text"
-302535920000220,
-302535920000680,
-302535920000681,
+302535920000220,"Like %s, but this shows hex positioning (offset or map, change in settings)."
+302535920000680,"Follow Mouse Grid Position"
+302535920000681,"Type of positioning to show."
 302535920000923,
 302535920000941,
 302535920000945,
