--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,8 +1,4 @@
 "ID"," Text"
-302535920000220,"Like %s, but this shows hex positioning (offset or map, change in settings)."
-302535920000680,"Follow Mouse Grid Position"
-302535920000681,"Type of positioning to show."
-302535920000923,
 302535920000941,
 302535920000945,
 302535920000962,
@@ -1145,6 +1141,10 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447,"Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448,"I'm afraid it could be 9/11 times 1,000."
+302535920000220,"Like %s, but this shows hex positioning (offset or map, change in settings)."
+302535920000680,"Follow Mouse Grid Position"
+302535920000681,"Type of positioning to show."
+302535920000923,"Set the radius used for Shift-F4 examining."
 302535920000926,"Toggle"
 302535920000929,"Reloads"
 302535920000421,"Override Condition Prereqs"
