Expanded Cheat Menu:
- Updated shortcut names.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -647,7 +647,7 @@ Fix with: %s"
 302535920001398,"Remove Sponsor Limits"
 302535920001399,"Allow you to build all buildings no matter your sponsor."
 302535920000064,"Build On Geysers"
-302535920000065,"Allows you to build on geysers. Use Shift-F4 around the area to delete the geyser objects (about 10-20 depending on size)."
+302535920000065,"Allows you to build on geysers. Use <green>%s</green> around the area to delete the geyser objects (about 10-20 depending on size)."
 302535920001367,"Toggles"
 302535920001344,"Points To Train"
 302535920001345,"How many points are needed to finish training."
@@ -1144,7 +1144,7 @@ Not permanent."
 302535920000220,"Like %s, but this shows hex positioning (offset or map, change in settings)."
 302535920000680,"Follow Mouse Grid Position"
 302535920000681,"Type of positioning to show."
-302535920000923,"Set the radius used for Shift-F4 examining."
+302535920000923,"Set the radius used for <green>%s</green> examining."
 302535920000926,"Toggle"
 302535920000929,"Reloads"
 302535920000421,"Override Condition Prereqs"
@@ -1276,7 +1276,7 @@ It's not as if domes need to be where you placed them (people will just ignore i
 302535920000489,"Delete Object(s)"
 302535920000490,"Deletes selected object or object under mouse cursor (most objs, not all)."
 302535920000492,"Opens the object examiner for the selected or moused-over obj.
-Use Shift-F4 or Ctrl-F4 to show a list of all objects in a radius around cursor."
+Use <green>%s</green> to show a list of all objects in a radius around cursor."
 302535920000493,"Change Map"
 302535920000494,"Change map (options to pick commander, sponsor, etc...
 
