Expanded Cheat Menu/Lib:
- BuildableHexGrid/HexShape_Toggle uses XText instead of Text (no more flicker when lots of them).

Mods:

Infobar More Info 1.3:
Jobs list shows amount of specs/open workspace slots of req spec.

POI Spawn Rate 0.2:
Min

Pause On Load 0.2:
Fix for new game freeze.

github@choggi.org

Signed-off-by: ChoGGi <github@choggi.org>

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -2328,7 +2328,7 @@ Click to open Paradox Breakthroughs Wiki page."
 302535920011379,"Sensor Tower Beeping"
 302535920011380,"RC Commander Drones Deployed"
 302535920011381,"Mirror Sphere Crackling"
-302535920011382,
+302535920011382,"Min"
 302535920011383,
 302535920011384,
 302535920011385,
