--- a/Mods ChoGGi/Infobar More Info/changes.txt
+++ b/Mods ChoGGi/Infobar More Info/changes.txt
@@ -1,3 +1,6 @@
+v1.3
+Jobs list shows amount of specs/open workspace slots of req spec.
+
 v1.2
 Fix for nil amounts in deposits (thanks MasterODZaster).
 
