--- a/Mods ChoGGi/RC Garage/changes.txt
+++ b/Mods ChoGGi/RC Garage/changes.txt
@@ -1,5 +1,8 @@
+v0.6
+Fix for issue with some rovers (thanks McKaby).
+
 v0.5
-Possible fix for missing selection panel items.
+Fix for missing selection panel items.
 
 v0.4
 Missing Rovers story fix.
