--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Doesn't remove colonists in passages (thanks Gunny).
+
 v0.4
 Now checks for the monument if it has yet to be built.
 Adds selection arrow to victim when you select the pod.
