--- a/Mods ChoGGi/Passenger Rocket Tweaks/changes.txt
+++ b/Mods ChoGGi/Passenger Rocket Tweaks/changes.txt
@@ -1,3 +1,6 @@
+v0.8
+Added actual age to applicants tooltip.
+
 v0.7
 Changed hide rocket/planet to hide background (since that was the original request).
 
