--- a/Mods ChoGGi/Drone Controller Show Available Resources/changes.txt
+++ b/Mods ChoGGi/Drone Controller Show Available Resources/changes.txt
@@ -1,3 +1,7 @@
+v0.5
+Removed log spam when placing dome/passage (thanks LukeH).
+Old count was left when leaving of range of resources.
+
 v0.4
 Maybe removed log spam.
 
